[package]
name = "imxrt-dcd"
version.workspace = true
edition = "2021"

authors.workspace = true
description = "Device Configuration Data (DCD) generator for i.MX RT1060 series firmware images"
repository = "https://github.com/imxrt-rs/imxrt-dcd"
categories = ["embedded", "hardware-support"]
keywords = ["arm", "cortex-m", "imxrt", "nxp"]
license = "MIT"

[dependencies]
itertools = "0.10"

[dev-dependencies]
imxrt-ral.workspace = true

[features]
default = ["ral"]
ral = []

####################################################

[workspace]
members = [
    "build-example"
]

[workspace.package]
version = "1.1.0"
authors = ["summivox <summivox@gmail.com>"]

[workspace.dependencies]
imxrt-dcd = { path = ".", version = "1.1.0" }
imxrt-ral = { version = "0.5.3", features = ["imxrt1062"] }